CF-templates/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'SoitinStock - Network Stack (Default VPC Extension for RDS)'

Parameters:
    VPCId:
        Type: AWS::EC2::VPC::Id
        Description: Default VPC ID

# Routing still goes through default routing table and internet gateway
# Later adding hardening, with (Nat Gateway if compute in private) and custom routing tables for private subnets.
Resources:
    # --------------------------------------------------------------------
    # Private Subnet A (AZ 1a)
    # --------------------------------------------------------------------
    PrivateSubnetA:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPCId
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: 172.31.64.0/20
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: SoitinStock-Private-A

    # --------------------------------------------------------------------
    # Private Subnet B (AZ 1b)
    # --------------------------------------------------------------------
    PrivateSubnetB:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPCId
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: 172.31.80.0/20
            MapPublicIpOnLaunch: false
            Tags:
                - Key: Name
                  Value: SoitinStock-Private-B

    # --------------------------------------------------------------------
    # DB Subnet Group (required for RDS)
    # --------------------------------------------------------------------
    DBSubnetGroup:
        Type: AWS::RDS::DBSubnetGroup
        Properties:
            DBSubnetGroupDescription: 'SoitinStock RDS subnet group'
            SubnetIds:
                - !Ref PrivateSubnetA
                - !Ref PrivateSubnetB
            DBSubnetGroupName: soitinstock-db-subnet-group
            Tags:
                - Key: Name
                  Value: SoitinStock-DBSubnetGroup

    # --------------------------------------------------------------------
    # EB Security Group
    # --------------------------------------------------------------------
    EBSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: 'Elastic Beanstalk EC2 instances security group'
            VpcId: !Ref VPCId
            SecurityGroupIngress:
                # Allow HTTP from anywhere (for now)
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
                  #Allow HTTPS from anywhere (for now)
                - IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                  CidrIp: 0.0.0.0/0
                # SSH
                # - IpProtocol: tcp
                #   FromPort: 22
                #   ToPort: 22
                # CidrIp: YOUR_IP/32 - my IP home
                # SSH
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 172.21.240.1/32 # IP trail
                  # SSH
                # - IpProtocol: tcp
                #   FromPort: 22
                #   ToPort: 22
                # CidrIp: YOUR_IP/32 - school IP, restrict later or disable SSH entirely

Outputs:
    PrivateSubnetAId:
        Value: !Ref PrivateSubnetA
        Export:
            Name: SoitinStock-PrivateSubnetA

    PrivateSubnetBId:
        Value: !Ref PrivateSubnetB
        Export:
            Name: SoitinStock-PrivateSubnetB

    DBSubnetGroupName:
        Value: !Ref DBSubnetGroup
        Export:
            Name: SoitinStock-DBSubnetGroup

    EBSecurityGroup:
        Value: !Ref EBSecurityGroup
        Export:
            Name: SoitinStock-EBSecurityGroup
